# Telegram_dashboard

./: .gitignore  CMakeLists.txt  README.md  config.json  dashboard.sh  last_message.json
libs/Rust/rust_lib/: Cargo.toml
libs/Rust/rust_lib/src/: lib.rs
libs/Rust/terminal/: Cargo.toml
libs/Rust/terminal/src/: lib.rs
src/: App.hpp  CMakeLists.txt  Commands.hpp  FileManagement.hpp  IMessageService.hpp  Telegram.hpp  logger.hpp  main.cpp  yolo5.hpp
tests/: App_test.cpp  CMakeLists.txt  dummy_test.cpp  telegram_test.cpp  yolo5_test.cpp
